Fix color contrast issues

--- a/src/styles/elements/_banners.scss
+++ b/src/styles/elements/_banners.scss
@@ -29,7 +29,7 @@
 
     .warning-inside {
       width: 450px;
-      background-color: lighten($color-orange, 33%);
+      background-color: lighten($color-orange, 52%);
       color: $color-orange;
       padding: 10px;
       font-weight: 600;
@@ -45,5 +45,12 @@
 
   &.exclusion-banner {
     font-size: 1.1em;
+  }
+
+  .exclusion-banner,
+  .inclusion-banner {
+    &__description {
+      color: $color-black;
+    }
   }
 }
