--- a/src/styles/elements/_tables.scss
+++ b/src/styles/elements/_tables.scss
@@ -10,7 +10,7 @@
       background: $color-white;
 
       &:hover {
-        background-color: lighten($color-blue, 30%);
+        background-color: lighten($color-blue, 45%);
       }
     }
   }
