--- a/src/styles/elements/_variables.scss
+++ b/src/styles/elements/_variables.scss
@@ -1,15 +1,15 @@
 //-------------------------- Colors -----------------------------------------//
 $color-black: #37404e;
 $color-white: #fff;
-$color-blue: #81c4cb;
+$color-blue: #449ba7;
 $color-gray-dark: #64707e;
-$color-gray: #a3aeaf;
+$color-gray: #8a9599;
 $color-gray-light: #7f8a98;
 $color-gray-lighter: #d8d8d8;
 $color-gray-lightest: #f5f8fb;
 $color-yellow: #f8c855;
 $color-red: #ffa4a4;
-$color-orange: #e5703c;
+$color-orange: #ab4317;
 $color-beige: #f9f3e3;
 
 // ------------------------- PATHS ----------------------------------------- //
